test_src/compiler_errors/parser_errors/ParserError1.b
class ParserError1 {
    void foo() {
        else
            println(0);
    }
}
